2009-09-03  Glenn Morris  <rgm@gnu.org>

	* arc-mode.el (archive-mode):
	* dos-fns.el (set-default-process-coding-system):
	* man.el (Man-getpage-in-background):
	* menu-bar.el (menu-bar-describe-menu):
	* server.el (server-process-filter):
	* startup.el (command-line):
	* tar-mode.el (tar-header-block-tokenize, tar-extract):
	* w32-fns.el (set-default-process-coding-system):
	* x-dnd.el (x-dnd-handle-file-name):
	* international/mule-cmds.el (mule-menu-keymap)
	(set-default-coding-systems, language-info-alist, set-language-info)
	(set-language-environment, standard-display-european-internal)
	(set-locale-environment):
	* international/mule-diag.el (mule-diag):
	* mail/emacsbug.el (report-emacs-bug):
	* mail/rmail.el (rmail-mode):
	* mail/sendmail.el (mail-setup):
	Use default-value rather than default-enable-multibyte-characters.

	* progmodes/f90.el: Move all safe properties into the defcustoms.
	(f90-get-correct-indent, f90-indent-region, f90-abbrev-start): Use memq.

	* calendar/appt.el (appt-check):
	* calendar/diary-lib.el (diary-set-header, diary-live-p)
	(diary-check-diary-file, diary-list-entries)
	(diary-include-other-diary-files, diary-simple-display)
	(diary-fancy-display, diary-print-entries)
	(diary-mark-included-diary-files, diary-make-entry):
	Don't call substitute-in-file-name on diary-file.

2009-09-03  Eduard Wiebe  <usenet@pusto.de>
	    Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/footnote.el (footnote-prefix): Make it a defcustom.
	(footnote-mode-map): Move initialization into the declaration.
	(footnote-minor-mode-map): Define it rather than changing global-map.
	(footnote-mode): Use define-minor-mode.

2009-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-file-attributes-with-ls)
	(tramp-do-file-attributes-with-perl)
	(tramp-do-file-attributes-with-stat): Rename from
	`tramp-handle-file-attributes-with-*'.
	(tramp-handle-file-attributes): Use them.
	(tramp-do-directory-files-and-attributes-with-perl)